# Opdracht_CGI-MQTT

sensor/: CMakeLists.txt  main.c
website/: CMakeLists.txt  main.c
